# make-notices

./: 3rd-party-notices.html  3rd-party-notices.json  3rd-party-notices.md  Cargo.toml  README.md  notices.toml
src/: main.rs
