[package]
name = "make-notices"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
license_file = "LICENSE"
authors = ["Zicklag <zicklag@katharostech.com>"]

[dependencies]
anyhow = "1.0.75"
cargo_metadata = { version = "0.17.0", features = ["builder"] }
chrono = "0.4.28"
clap = { version = "4.4.2", features = ["derive"] }
env_logger = "0.10.0"
html-escape = "0.2.13"
license = { version = "3.1.1", features = ["offline"] }
log = "0.4.20"
once_cell = "1.18.0"
regex = { version = "1.9.5", default-features = false, features = ["perf", "unicode-case"] }
serde = { version = "1.0.188", features = ["derive"] }
serde-spdx = "0.8.4"
serde_json = "1.0.105"
spdx = "0.10.2"
toml = "0.7.6"

